--- a/force-app/main/default/lwc/tableauViz/tableauViz.html
+++ b/force-app/main/default/lwc/tableauViz/tableauViz.html
@@ -1,3 +1,3 @@
 <template>
-    <div class="slds-m-around_medium"></div>
+    <div class="slds-m-around_medium" lwc:dom="manual"></div>
 </template>
