Styled viz wrapper with a SLDS card

--- a/force-app/main/default/lwc/tableauViz/tableauViz.html
+++ b/force-app/main/default/lwc/tableauViz/tableauViz.html
@@ -1,3 +1,5 @@
 <template>
-    <div class="slds-m-around_medium" lwc:dom="manual"></div>
+    <article class="slds-card">
+        <div lwc:dom="manual"></div>
+    </article>
 </template>
