--- a/force-app/main/default/lwc/tableauViz/tableauViz.html
+++ b/force-app/main/default/lwc/tableauViz/tableauViz.html
@@ -273,7 +273,11 @@
                         </g>
                     </svg>
                     <div class="slds-text-longform">
-                        <h3 class="slds-text-heading_medium">{errorMessage}</h3>
+                        <h3
+                            class="slds-text-heading_medium slds-text-color_destructive"
+                        >
+                            {errorMessage}
+                        </h3>
                     </div>
                 </div>
             </div>
