temp fix to handle changing the vizUrl. Temp

--- a/force-app/main/default/lwc/tableauViz/tableauViz.html
+++ b/force-app/main/default/lwc/tableauViz/tableauViz.html
@@ -1,5 +1,6 @@
 <template>
     <article class="slds-card">
+        <div>{_vizUrl}</div>
         <div class="tabVizPlaceholder" lwc:dom="manual"></div>
     </article>
 </template>
