Ran updated Prettier

--- a/force-app/main/default/lwc/tableauViz/tableauVizError.html
+++ b/force-app/main/default/lwc/tableauViz/tableauVizError.html
@@ -102,7 +102,9 @@
                                 >
                                     <g
                                         transform="translate(30.000000, 8.000000)"
-                                        class="slds-illustration__fill-secondary"
+                                        class="
+                                            slds-illustration__fill-secondary
+                                        "
                                     >
                                         <path
                                             vector-effect="non-scaling-stroke"
@@ -119,7 +121,9 @@
                                         ></path>
                                     </g>
                                     <g
-                                        class="slds-illustration__stroke-primary"
+                                        class="
+                                            slds-illustration__stroke-primary
+                                        "
                                         stroke-width="3"
                                     >
                                         <path
@@ -181,7 +185,9 @@
                                         <path
                                             vector-effect="non-scaling-stroke"
                                             d="M77,88.5 L92.5,88.5 L92.5,81 C92.5,77.1340068 95.6340068,74 99.5,74 L99.5,74 C103.365993,74 106.5,77.1340068 106.5,81 L106.5,96.5 C106.5,99.8137085 103.813708,102.5 100.5,102.5 L77,102.5"
-                                            class="slds-illustration__fill-secondary"
+                                            class="
+                                                slds-illustration__fill-secondary
+                                            "
                                             stroke-linecap="round"
                                             stroke-linejoin="round"
                                         ></path>
@@ -219,14 +225,18 @@
                                     <g>
                                         <circle
                                             vector-effect="non-scaling-stroke"
-                                            class="slds-illustration__fill-secondary"
+                                            class="
+                                                slds-illustration__fill-secondary
+                                            "
                                             cx="64"
                                             cy="64"
                                             r="23"
                                         ></circle>
                                         <circle
                                             vector-effect="non-scaling-stroke"
-                                            class="slds-illustration__stroke-secondary"
+                                            class="
+                                                slds-illustration__stroke-secondary
+                                            "
                                             stroke-width="3"
                                             stroke-linecap="round"
                                             stroke-linejoin="round"
@@ -238,7 +248,9 @@
                                         ></circle>
                                         <circle
                                             vector-effect="non-scaling-stroke"
-                                            class="slds-illustration__stroke-secondary"
+                                            class="
+                                                slds-illustration__stroke-secondary
+                                            "
                                             stroke-width="3"
                                             stroke-linecap="round"
                                             stroke-linejoin="round"
@@ -251,7 +263,9 @@
                                     </g>
                                     <g
                                         transform="translate(41.000000, 41.000000)"
-                                        class="slds-illustration__stroke-primary"
+                                        class="
+                                            slds-illustration__stroke-primary
+                                        "
                                         stroke-width="3"
                                     >
                                         <circle
@@ -268,7 +282,10 @@
                 </svg>
                 <div class="slds-text-longform">
                     <h3
-                        class="slds-text-heading_medium slds-text-color_destructive"
+                        class="
+                            slds-text-heading_medium
+                            slds-text-color_destructive
+                        "
                     >
                         {errorMessage}
                     </h3>
